# last-resort-liquidator

./: Makefile  README.md  hardhat.config.js  package.json  pyproject.toml
contracts/: Liquidator.sol
interfaces/: ERC3156FlashBorrowerInterface.sol  ERC3156FlashLenderInterface.sol  JoeLending.sol
interfaces/joecore/: IERC20.sol
scripts/: liquidation.py
tests/: test_liquidator.py
