[tool.poetry]
name = "traderjoe-bounty"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8, <3.10"
eth-brownie = "^1.17.1"
httpx = "^0.21.1"

[tool.poetry.dev-dependencies]
bpython = "^0.22.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
